Notifications have IDs to prevent overlap removal

--- a/bloglist/frontend/src/index.scss
+++ b/bloglist/frontend/src/index.scss
@@ -27,6 +27,10 @@
   margin-bottom: 10px;
 }
 
+.hidden {
+  display: hidden;
+}
+
 #create-blog {
   margin: 0.25em 0;
   display: table;
